
News
----

Version 0.4.1
^^^^^^^^^^^^^

    * Homotopy (gmin and source) now actually work. The implementation
      was wrong in previous versions.

    * Improved documentation (Options and Constant tables, Device categories)


Version 0.4.0
^^^^^^^^^^^^^

    * Added sparse matrix support for OP, DC and Tran analyses.
    
    * Added NEWS file and examples directory
    
    * Other general improvements
