@@ -13,8 +13,6 @@ Short-term goals:
 
 Longer term goals and other tasks to be done at some time:
 
-  * Add more device models
-  
   * Classify device catalog by device type / improve device library
     organization
   
