@@ -5,6 +5,8 @@ News
 Version 0.4.1
 ^^^^^^^^^^^^^
 
+    * Internal terminal variables can now be plotted from the netlist
+
     * Homotopy (gmin and source) now actually work. The implementation
       was wrong in previous versions.
 
